# Tarang

./: README.md
controls/: README.md
controls/triton_control/: CMakeLists.txt  package.xml
controls/triton_control/cfg/: PIDparams.cfg
controls/triton_control/config/: TAM.yaml  pos_pid_control.yaml  thruster_manager.yaml
controls/triton_control/launch/: controller.launch  controller_combined.launch  start_thruster_manager.launch
controls/triton_control/scripts/: Autotuner  GroundTruth  PositionControl
controls/triton_odometry/: CMakeLists.txt  package.xml
controls/triton_odometry/launch/: dvl_data.launch  odom_from_sensors_start.launch  odom_start.launch
controls/triton_odometry/src/: dvl_data.py  odom.py  odom_sensors.py
controls/uuv_thruster_manager/scripts/: thruster_allocator.py
hardware/hardware_dvl/: CMakeLists.txt  README.md
hardware/hardware_dvl/scripts/: publisher.py  serial.py
hardware/hardware_imu/: CMakeLists.txt  README.md  package.xml
hardware/ueye_cam/: CMakeLists.txt
hardware/xsens_driver/: README.md
hardware/xsens_driver/nodes/: mtdef.py  mtdevice.py  mtnode.py
master/: CMakeLists.txt  README.md  package.xml
navigation/: README.md  package.xml
simulation/triton_description/: CMakeLists.txt  package.xml
simulation/uuv_gazebo_worlds/models/Gate_URDF_NEW/: model.config  package.xml
simulation/uuv_gazebo_worlds/models/Gate_URDF_NEW/urdf/: Gate_URDF_NEW.urdf
utils/: README.md  package.xml
vision/: README.md  package.xml
vision/camera_interface/: package.xml
vision/image_enhancement/: CMakeLists.txt  package.xml
(+122 files in other folders)
