<package>
  <name>Gate_URDF_NEW</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for Gate_URDF_NEW</p>
    <p>This package contains configuration data, 3D models and launch files
for Gate_URDF_NEW robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>gazebo</build_depend>
</package>